--- a/index.html
+++ b/index.html
@@ -11,28 +11,12 @@
 <body style="margin: 0; overflow: hidden;">
     <!-- A-Frame Scene with AR.js -->
     <a-scene embedded arjs>
-        <!-- Rocket Base -->
-        <a-entity id="rocket" position="0 0 -3" animation__launch="property: position; to: 0 5 -3; dur: 2000; startEvents: launch">
-            <!-- Rocket Body -->
-            <a-cylinder position="0 0.75 0" radius="0.1" height="1.5" color="red"></a-cylinder>
-            <!-- Rocket Cone (Top) -->
-            <a-cone position="0 1.75 0" radius-bottom="0.1" height="0.5" color="yellow"></a-cone>
-            <!-- Rocket Fins -->
-            <a-box position="0.1 0.25 0" width="0.02" height="0.2" depth="0.05" color="yellow"></a-box>
-            <a-box position="-0.1 0.25 0" width="0.02" height="0.2" depth="0.05" color="yellow"></a-box>
-            <a-box position="0 0.25 0.1" width="0.05" height="0.2" depth="0.02" color="yellow"></a-box>
-            <a-box position="0 0.25 -0.1" width="0.05" height="0.2" depth="0.02" color="yellow"></a-box>
-        </a-entity>
-        <a-entity id="launch-button" position="0 0 -3" text="value: Light the Rocket; color: #FFF"
-          geometry="primitive: plane; height: 0.5; width: 1"
-          material="color: blue; opacity: 0.6"
-          event-set__click="event: click; _target: #rocket; launch">
-        </a-entity>
+        <a-camera position="0 1.6 0" fov="80" look-controls="enabled: true"></a-camera>
+
         <a-entity id="fireworks" visible="false">
             <a-sphere position="0 5 -3" radius="1" color="yellow" opacity="0.5"animation="property: scale; to: 5 5 5; dur: 1500; easing: easeOutQuad; loop: false"></a-sphere>
             <a-text value="Happy Diwali by Google and VE Entertainment!" position="0 6 -3" scale="3 3 3" color="#FFCC00" visible="false"></a-text>
         </a-entity>
-    
     </a-scene>
 </body>
 </html>
